; ModuleID = '/home/carl/AnghaBench/linux/drivers/edac/extr_sb_edac.c_get_intlv_mode_str.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/edac/extr_sb_edac.c_get_intlv_mode_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KNIGHTS_LANDING = common dso_local global i32 0, align 4
@knl_intlv_mode = common dso_local global i8** null, align 8
@.str = private unnamed_addr constant [6 x i8] c"[8:6]\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"[8:6]XOR[18:16]\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i32)* @get_intlv_mode_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_intlv_mode_str(i32 %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @KNIGHTS_LANDING, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %15

9:                                                ; preds = %2
  %10 = load i8**, i8*** @knl_intlv_mode, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i64 @knl_interleave_mode(i32 %11)
  %13 = getelementptr inbounds i8*, i8** %10, i64 %12
  %14 = load i8*, i8** %13, align 8
  store i8* %14, i8** %3, align 8
  br label %21

15:                                               ; preds = %2
  %16 = load i32, i32* %4, align 4
  %17 = call i64 @interleave_mode(i32 %16)
  %18 = icmp ne i64 %17, 0
  %19 = zext i1 %18 to i64
  %20 = select i1 %18, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0)
  store i8* %20, i8** %3, align 8
  br label %21

21:                                               ; preds = %15, %9
  %22 = load i8*, i8** %3, align 8
  ret i8* %22
}

declare dso_local i64 @knl_interleave_mode(i32) #1

declare dso_local i64 @interleave_mode(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
